--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-3 col-xl-2 d-none d-lg-block">
-					<div class="filter">
-						<div class="filter-title">
+					<div class="category">
+						<div class="category-title">
 							<h5>Категории</h5>
 						</div>
 						<ul>
-							<li><a href="#">Телефоны и аксессуары</a></li>
-							<li><a href="#">Компьютеры и оргтехника</a></li>
-							<li><a href="#">Электроника</a></li>
-							<li><a href="#">Бытовая Техника</a></li>
-							<li><a href="#">Спорт и развлечения</a></li>
+							<li><a href="#" class="category-item">Телефоны и аксессуары</a></li>
+							<li><a href="#" class="category-item">Компьютеры и оргтехника</a></li>
+							<li><a href="#" class="category-item">Электроника</a></li>
+							<li><a href="#" class="category-item">Бытовая Техника</a></li>
+							<li><a href="#" class="category-item">Спорт и развлечения</a></li>
 						</ul>
 					</div>
 				</div>
