--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-	<link rel="manifest" href="favicon/manifest.json">
+<!--	<link rel="manifest" href="favicon/manifest.json">-->
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="style/bootstrap.min.css">
 	<link rel="stylesheet" href="./scss/style.css">
-	<title>O-ZONE GLO ACADEMY</title>
+	<title>AliJSpress</title>
 </head>
 
 <body>
@@ -63,11 +63,11 @@
 							<h5>Категории</h5>
 						</div>
 						<ul>
-							<li><a href="#" class="category-item">Телефоны и аксессуары</a></li>
-							<li><a href="#" class="category-item">Компьютеры и оргтехника</a></li>
-							<li><a href="#" class="category-item">Электроника</a></li>
-							<li><a href="#" class="category-item">Бытовая Техника</a></li>
-							<li><a href="#" class="category-item">Спорт и развлечения</a></li>
+							<li><a href="#" class="category-item category-item__mobile">Телефоны и аксессуары</a></li>
+							<li><a href="#" class="category-item category-item__pc">Компьютеры и оргтехника</a></li>
+							<li><a href="#" class="category-item category-item__electron">Электроника</a></li>
+							<li><a href="#" class="category-item category-item__home">Бытовая Техника</a></li>
+							<li><a href="#" class="category-item category-item__sport">Спорт и развлечения</a></li>
 						</ul>
 					</div>
 				</div>
@@ -75,124 +75,208 @@
 					<div class="container">
 						<div class="row no-gutters goods">
 							<!-- КАРТОЧКИ ТОВАРОВ -->
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
 								<div class="card">
 									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1033180284.jpg')"></span>
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
 										<button class="card-add-wishlist"></button>
 									</div>
 									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Sony PlayStation 4 Pro</a>
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
 										<div class="card-price">33990 ₽</div>
 										<a href="#" class="card-store">MaxGear3C Store</a>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
 								<div class="card">
 									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1027495663.jpg')"></span>
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
 										<button class="card-add-wishlist"></button>
 									</div>
 									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Sony PlayStation 3 Super Slim</a>
-										<div class="card-price">16499 ₽</div>
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
 										<a href="#" class="card-store">MaxGear3C Store</a>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
 								<div class="card">
 									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024358491.jpg')"></span>
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
 										<button class="card-add-wishlist"></button>
 									</div>
 									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Xbox One X</a>
-										<div class="card-price">39990 ₽</div>
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
 										<a href="#" class="card-store">MaxGear3C Store</a>
 									</div>
 								</div>
 							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
 								<div class="card">
 									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024822131.jpg')"></span>
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
 										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="db/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg.webp" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
+										<div class="card-price">33990 ₽</div>
+										<a href="#" class="card-store">MaxGear3C Store</a>
+									</div>
+								</div>
+							</div>
 
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Xbox One S</a>
-										<div class="card-price">23411 ₽</div>
-										<a href="#" class="card-store">MaxGear3C Store</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021386685.jpg')"></span>
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Nintendo Switch</a>
-										<div class="card-price">24751 ₽</div>
-										<a href="#" class="card-store">MaxGear3C Store</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024928305.jpg')"></span>
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Sega Retro Genesis HD</a>
-										<div class="card-price">3624 ₽</div>
-										<a href="#" class="card-store">MaxGear3C Store</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021877092.jpg')"></span>
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Dendy Junior</a>
-										<div class="card-price">1551 ₽</div>
-										<a href="#" class="card-store">MaxGear3C Store</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3 pb-3 pr-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<span class="card-img-top"
-											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1025222877.jpg')"></span>
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Игровая приставка Sony PlayStation Classic</a>
-										<div class="card-price">10445 ₽</div>
-										<a href="#" class="card-store">MaxGear3C Store</a>
-									</div>
-								</div>
-							</div>
 							<!-- END КАРТОЧКИ ТОВАРОВ -->
 						</div>
 					</div>
 
 				</div>
+
 			</div>
 		</div>
 
