--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 		<nav>
 			<div class="container">
 				<div class="row justify-content-between align-items-center">
-					<a class="logo" href="/"></a>
+					<a class="logo" href="index.html"></a>
 
 					<div class="search">
 						<div class="search-wrapper">
 							<input class="search-wrapper_input" type="text">
 						</div>
-						<div class="search-btn">
-							<button></button>
+						<div class="search-wrap-btn">
+							<button class="search-btn" id="search-btn" aria-label="Поиск товаров"></button>
 						</div>
 					</div>
 					<a href="#" class="nav-elements" id="cart">
@@ -56,13 +56,13 @@
 
 	<main>
 		<div class="container">
-			<div class="row">
-				<div class="col-3 col-xl-2 d-none d-lg-block">
+			<div class="row justify-content-center justify-content-sm-between">
+				<div class="col-6 col-sm-4 col-md-3 col-xl-2">
 					<div class="category">
 						<div class="category-title">
 							<h5>Категории</h5>
 						</div>
-						<ul>
+						<ul class="category-list">
 							<li><a href="#" class="category-item category-item__mobile" data-category="mobile">Телефоны и аксессуары</a></li>
 							<li><a href="#" class="category-item category-item__pc" data-category="pc">Компьютеры и оргтехника</a></li>
 							<li><a href="#" class="category-item category-item__electron" data-category="electron">Электроника</a></li>
@@ -71,153 +71,28 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-12 col-lg-9 col-xl-10">
+				<div class="col-12 col-sm-6 col-md-9 col-xl-10">
 					<div class="container">
-						<div class="row no-gutters goods">
+						<div class="row no-gutters goods-wrapper justify-content-center">
 							<!-- КАРТОЧКИ ТОВАРОВ -->
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/mobile/Global-Version-Xiaomi-Mi-9T-128GB-ROM-6GB-RAM-Brand-New-Official-mi9t-128GB.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Глобальная версия Xiaomi Mi 9T 128 Гб ROM 6 Гб RAM (абсолютно новая и герметичная коробка) mi9t 128 гб</a>
-										<div class="card-price">17674.91 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
+<!--							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">-->
+<!--								<div class="card">-->
+<!--									<div class="card-img-wrapper">-->
+<!--										<img class="card-img-top" src="img/temp.png" alt="">-->
+<!--										<button class="card-add-wishlist"></button>-->
+<!--									</div>-->
+<!--									<div class="card-body justify-content-between">-->
+<!--										<a href="#" class="card-title">Имя товара</a>-->
+<!--										<div class="card-price">100000 ₽</div>-->
+<!--										<div>-->
+<!--											<button class="card-add-cart">Добавить в корзину</button>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
 
 
-									</div>
-								</div>
-							</div>
 
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/mobile/Dual-Dynamic-Driver-Blitzwolf-BW-FYE7-TWS-Bluetooth-V5-0-In-ear-Earphone-Bass-Stereo.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Blitzwolf BW-FYE7 TWS bluetooth 5.0 Наушники-вкладыши Бас Стерео Наушники двустороннего вызова True Wireless Наушники Лучшая музыкальная гарнитура Наушники Handsfree</a>
-										<div class="card-price">2170.94 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/sport/YUEDGE-New-Anti-Slip-Football-Socks-Men-Sport-Outdoor-Cotton-Cycling-Socks-Bike-Socks.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">YUEDGE Новые противоскользящие футбольные носки мужские спортивные уличные хлопковые велосипедные носки</a>
-										<div class="card-price">237.99 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/pc/Steampunk-Retro-Gaming-Keyboard-Russian-English-Layout-Round-Keycap-Backlit-USB-Wired-Glowing-Metal-Panel-Crystal.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Стимпанк Ретро игровая клавиатура русская/английская раскладка круглая клавиатура с подсветкой USB Проводная светящаяся металлическая панель Кристалл границы</a>
-										<div class="card-price">1040.97 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/electron/SCOMAS-Smart-Watch-Women-2019-IP67-Waterproof-Heart-Rate-Monitoring-Bluetooth-For-Android-IOS-Fitness-Bracelet.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Смарт-часы SCOMAS для женщин 2019 IP67 Водонепроницаемый мониторинг сердечного ритма Bluetooth для Android IOS фитнес-браслет женские умные часы</a>
-										<div class="card-price">2047.84 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/home/CUKYI-Italy-espresso-coffee-machine-20-BAR-High-Pressure-Steam-semi-automatic-coffee-maker-Milk-Bubble.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">CUKYI итальянская эспрессо-кофемашина 20 бар, Паровая Полуавтоматическая кофеварка высокого давления, молочные пузырьки, кофемашины с вилкой ЕС и США</a>
-										<div class="card-price">5049.53 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/sport/CUESOUL-Archer-23-Grams-Steel-Tip-Darts-Black-Coating-Brass-Barrels.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">CUESOUL Профессиональный Арчер 20/23/26 грамм Сталь наконечником стрелы-черное покрытие латунные бочки</a>
-										<div class="card-price">568.15 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
-
-							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
-								<div class="card">
-									<div class="card-img-wrapper">
-										<img class="card-img-top" src="db/img-mini/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg" alt="">
-										<button class="card-add-wishlist"></button>
-									</div>
-									<div class="card-body justify-content-between">
-										<a href="#" class="card-title">Надувной фламинго, плавательный поплавок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</a>
-										<div class="card-price">1286.53 ₽</div>
-										<div>
-											<button class="card-add-cart">Добавить в корзину</button>
-										</div>
-
-
-									</div>
-								</div>
-							</div>
 
 
 							<!-- END КАРТОЧКИ ТОВАРОВ -->
@@ -240,18 +115,18 @@
 			</div>
 
 			<div class="cart-wrapper">
-				<div id="cart-empty">
+				<!-- <div id="cart-empty">
 					Ваша корзина пока пуста
-				</div>
+				</div> -->
 
 				<div class="goods">
 					<div class="goods-img-wrapper">
-						<img class="goods-img" src="db/img-mini/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg" alt="">
+						<img class="goods-img" src="img/temp.png" alt="">
 
 					</div>
 					<div class="goods-description">
-						<h2 class="goods-title">Надувной фламинго, плавательный попл1авок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</h2>
-						<p class="goods-price">55000 ₽</p>
+						<h2 class="goods-title">Название товара</h2>
+						<p class="goods-price">100000 ₽</p>
 
 					</div>
 					<div class="goods-price-count">
@@ -266,50 +141,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="goods">
-					<div class="goods-img-wrapper">
-						<img class="goods-img" src="db/img-mini/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg" alt="">
 
-					</div>
-					<div class="goods-description">
-						<h2 class="goods-title">Надувной фламинго, плавательный попл1авок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</h2>
-						<p class="goods-price">65221 ₽</p>
-
-					</div>
-					<div class="goods-price-count">
-						<div class="goods-trigger">
-							<button class="goods-add-wishlist"></button>
-							<button class="goods-delete"></button>
-						</div>
-						<div class="goods-count">
-							<button class="goods-count-minus">-</button>
-							<input type="number" class="goods-count-total">
-							<button class="goods-count-plus">+</button>
-						</div>
-					</div>
-				</div>
-				<div class="goods">
-					<div class="goods-img-wrapper">
-						<img class="goods-img" src="db/img-mini/sport/60-Inch-Giant-Inflatable-Flamingo-Pool-Float-Pink-Ride-On-Swimming-Ring-Adults-Children-Water-Holiday.jpg_220x220xz.jpg" alt="">
-
-					</div>
-					<div class="goods-description">
-						<h2 class="goods-title">Надувной фламинго, плавательный попла1вок, розовый поплавок, кольцо для плавания для взрослых и детей, игрушки для праздников и вечеринок, Piscina 150 см</h2>
-						<p class="goods-price">5454 ₽</p>
-
-					</div>
-					<div class="goods-price-count">
-						<div class="goods-trigger">
-							<button class="goods-add-wishlist"></button>
-							<button class="goods-delete"></button>
-						</div>
-						<div class="goods-count">
-							<button class="goods-count-minus">-</button>
-							<input type="number" class="goods-count-total">
-							<button class="goods-count-plus">+</button>
-						</div>
-					</div>
-				</div>
 
 
 			</div>
@@ -322,6 +154,16 @@
 	</div>
 
 
+
+	<script src="script.js"></script>
+
 </body>
 
 </html>
+
+<!-- spinner 
+	
+<div id="spinner"><div class="spinner-loading"><div><div><div></div>
+</div><div><div></div></div><div><div></div></div><div><div></div></div></div></div></div>
+
+-->
