--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 				<div class="row justify-content-between align-items-center">
 					<a class="logo" href="index.html"></a>
 
-					<div class="search">
+					<form class="search">
 						<div class="search-wrapper">
-							<input class="search-wrapper_input" type="text">
+							<input id="searchGoods" class="search-wrapper_input" type="text" aria-label="Поиск товаров" role='search'>
 						</div>
 						<div class="search-wrap-btn">
-							<button class="search-btn" id="search-btn" aria-label="Поиск товаров"></button>
+							<button type="submit" class="search-btn" id="search-btn" aria-label="Поиск товаров"></button>
 						</div>
-					</div>
+					</form>
 					<a href="#" class="nav-elements" id="cart">
 						<span class="counter">0</span>
 					</a>
