--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 					<form class="search">
 						<div class="search-wrapper">
-							<input id="searchGoods" class="search-wrapper_input" type="text" aria-label="Поиск товаров" role='search'>
+							<input id="searchGoods" class="search-wrapper_input" type="text" aria-label="Поиск товаров" role="search">
 						</div>
 						<div class="search-wrap-btn">
 							<button type="submit" class="search-btn" id="search-btn" aria-label="Поиск товаров"></button>
@@ -46,7 +46,7 @@
 					<a href="#" class="nav-elements" id="cart">
 						<span class="counter">0</span>
 					</a>
-					<a href="#" class="nav-elements" id="whishlist">
+					<a href="#" class="nav-elements" id="wishlist">
 						<span class="counter">0</span>
 					</a>
 				</div>
@@ -63,11 +63,21 @@
 							<h5>Категории</h5>
 						</div>
 						<ul class="category-list">
-							<li><a href="#" class="category-item category-item__mobile" data-category="mobile">Телефоны и аксессуары</a></li>
-							<li><a href="#" class="category-item category-item__pc" data-category="pc">Компьютеры и оргтехника</a></li>
-							<li><a href="#" class="category-item category-item__electron" data-category="electron">Электроника</a></li>
-							<li><a href="#" class="category-item category-item__home" data-category="home">Бытовая Техника</a></li>
-							<li><a href="#" class="category-item category-item__sport" data-category="sport">Спорт и развлечения</a></li>
+							<li>
+								<a href="#" class="category-item category-item__mobile" data-category="mobile">Телефоны и аксессуары</a>
+							</li>
+							<li>
+								<a href="#" class="category-item category-item__pc" data-category="pc">Компьютеры и оргтехника</a>
+							</li>
+							<li>
+								<a href="#" class="category-item category-item__electron" data-category="electron">Электроника</a>
+							</li>
+							<li>
+								<a href="#" class="category-item category-item__home" data-category="home">Бытовая Техника</a>
+							</li>
+							<li>
+								<a href="#" class="category-item category-item__sport" data-category="sport">Спорт и развлечения</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -75,24 +85,21 @@
 					<div class="container">
 						<div class="row no-gutters goods-wrapper justify-content-center">
 							<!-- КАРТОЧКИ ТОВАРОВ -->
-<!--							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">-->
-<!--								<div class="card">-->
-<!--									<div class="card-img-wrapper">-->
-<!--										<img class="card-img-top" src="img/temp.png" alt="">-->
-<!--										<button class="card-add-wishlist"></button>-->
-<!--									</div>-->
-<!--									<div class="card-body justify-content-between">-->
-<!--										<a href="#" class="card-title">Имя товара</a>-->
-<!--										<div class="card-price">100000 ₽</div>-->
-<!--										<div>-->
-<!--											<button class="card-add-cart">Добавить в корзину</button>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--							</div>-->
-
-
-
+							<div class="card-wrapper col-12 col-md-6 col-lg-4 col-xl-3 pb-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<img class="card-img-top" src="img/temp.png" alt="">
+										<button class="card-add-wishlist"></button>
+									</div>
+									<div class="card-body justify-content-between">
+										<a href="#" class="card-title">Имя товара</a>
+										<div class="card-price">100000 ₽</div>
+										<div>
+											<button class="card-add-cart">Добавить в корзину</button>
+										</div>
+									</div>
+								</div>
+							</div>
 
 
 							<!-- END КАРТОЧКИ ТОВАРОВ -->
@@ -115,9 +122,9 @@
 			</div>
 
 			<div class="cart-wrapper">
-				<!-- <div id="cart-empty">
+				<div id="cart-empty">
 					Ваша корзина пока пуста
-				</div> -->
+				</div>
 
 				<div class="goods">
 					<div class="goods-img-wrapper">
@@ -134,14 +141,9 @@
 							<button class="goods-add-wishlist"></button>
 							<button class="goods-delete"></button>
 						</div>
-						<div class="goods-count">
-							<button class="goods-count-minus">-</button>
-							<input type="number" class="goods-count-total">
-							<button class="goods-count-plus">+</button>
-						</div>
+						<div class="goods-count">1</div>
 					</div>
 				</div>
-
 
 
 			</div>
@@ -154,15 +156,14 @@
 	</div>
 
 
-
 	<script src="script.js"></script>
 
 </body>
 
 </html>
 
-<!-- spinner 
-	
+<!-- spinner
+
 <div id="spinner"><div class="spinner-loading"><div><div><div></div>
 </div><div><div></div></div><div><div></div></div><div><div></div></div></div></div></div>
 
